--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "provision:project-forms": "node scripts/provision_project_forms.cjs"
   },
   "dependencies": {
     "@google/genai": "^1.37.0",
     "appwrite": "^21.5.0",
+    "aws-amplify": "^6.16.0",
     "form-data": "^4.0.5",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.563.0",
@@ -22,9 +24,15 @@
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.20.0",
+    "@aws-amplify/backend-cli": "^1.8.2",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
+    "aws-cdk-lib": "^2.234.1",
+    "constructs": "^10.4.5",
+    "esbuild": "^0.27.2",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
     "vite": "^6.2.0"
   }
 }
