--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "form-data": "^4.0.5",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.563.0",
-    "node-appwrite": "^4.0.0",
     "node-fetch": "^2.7.0",
     "pdfjs-dist": "^5.4.530",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-router-dom": "^7.13.0"
+    "react-router-dom": "^7.13.0",
+    "survey-core": "^2.5.8",
+    "survey-creator-core": "^2.5.8",
+    "survey-creator-react": "^2.5.8",
+    "survey-react-ui": "^2.5.8"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.20.0",
@@ -30,7 +33,9 @@
     "@vitejs/plugin-react": "^5.0.0",
     "aws-cdk-lib": "^2.234.1",
     "constructs": "^10.4.5",
+    "dotenv": "^17.2.3",
     "esbuild": "^0.27.2",
+    "node-appwrite": "^21.1.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vite": "^6.2.0"
