--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "provision:project-forms": "node scripts/provision_project_forms.cjs"
+    "provision:project-forms": "node scripts/provision_project_forms.cjs",
+    "type-check": "tsc --noEmit",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "validate": "npm run type-check && npm run lint && npm run format:check",
+    "prepare": "husky install",
+    "analyze": "vite-bundle-visualizer"
   },
   "dependencies": {
     "@google/genai": "^1.37.0",
@@ -20,6 +28,7 @@
     "pdfjs-dist": "^5.4.530",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-quill-new": "^3.7.0",
     "react-router-dom": "^7.13.0",
     "survey-core": "^2.5.8",
     "survey-creator-core": "^2.5.8",
@@ -29,15 +38,38 @@
   "devDependencies": {
     "@aws-amplify/backend": "^1.20.0",
     "@aws-amplify/backend-cli": "^1.8.2",
+    "@eslint/js": "^9.39.2",
     "@types/node": "^22.14.0",
+    "@types/react": "^19.0.6",
+    "@types/react-dom": "^19.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
     "@vitejs/plugin-react": "^5.0.0",
     "aws-cdk-lib": "^2.234.1",
     "constructs": "^10.4.5",
     "dotenv": "^17.2.3",
     "esbuild": "^0.27.2",
+    "eslint": "^8.57.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.11",
     "node-appwrite": "^21.1.0",
+    "prettier": "^3.4.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-bundle-visualizer": "^1.2.1"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,css,md}": [
+      "prettier --write"
+    ]
   }
 }
