feat: add ImageSlider component for image display and selection
feat: create script to add "description" attribute to required_documents collection

feat: create script to add "overrideDocumentName" attribute to required_documents collection

feat: create script to add remaining attributes to required_documents collection

feat: create script to list attributes in required_documents collection

feat: implement TaskLibrary component for managing task templates

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,11 +6,11 @@
       "request": "launch",
       "name": "Launch Chrome against localhost",
       "url": "http://localhost:3000",
-      "webRoot": "${workspaceFolder}",
+      "webRoot": "${workspaceFolder}/estately",
       "sourceMaps": true,
       "sourceMapPathOverrides": {
-        "webpack:///./~/*": "${webspaceFolder}/node_modules/*",
-        "webpack:///./*": "${webspaceFolder}/*",
+        "webpack:///./~/*": "${webspaceFolder}/node_modules/estately/*",
+        "webpack:///./*": "${webspaceFolder}/estately/*",
         "webpack:///*": "*"
       }
     },
@@ -19,7 +19,7 @@
       "request": "attach",
       "name": "Attach to Chrome",
       "port": 3000,
-      "webRoot": "${workspaceFolder}"
+      "webRoot": "${workspaceFolder}/estately"
     },
     {
       "type": "node",
