--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.37.0",
+    "@react-pdf/renderer": "^4.3.2",
     "appwrite": "^21.5.0",
     "aws-amplify": "^6.16.0",
     "form-data": "^4.0.5",
