--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview",
     "provision:project-forms": "node scripts/provision_project_forms.cjs",
     "type-check": "tsc --noEmit",
-    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "validate": "npm run type-check && npm run lint && npm run format:check",
@@ -18,10 +18,12 @@
     "analyze": "vite-bundle-visualizer"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.984.0",
+    "@aws-sdk/lib-storage": "^3.984.0",
+    "@aws-sdk/s3-request-presigner": "^3.984.0",
     "@google/genai": "^1.37.0",
     "@react-pdf/renderer": "^4.3.2",
     "appwrite": "^21.5.0",
-    "aws-amplify": "^6.16.0",
     "form-data": "^4.0.5",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.563.0",
@@ -30,11 +32,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-quill-new": "^3.7.0",
-    "react-router-dom": "^7.13.0",
-    "survey-core": "^2.5.8",
-    "survey-creator-core": "^2.5.8",
-    "survey-creator-react": "^2.5.8",
-    "survey-react-ui": "^2.5.8"
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.20.0",
@@ -46,7 +44,6 @@
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "aws-cdk-lib": "^2.234.1",
     "constructs": "^10.4.5",
     "dotenv": "^17.2.3",
     "esbuild": "^0.27.2",
@@ -55,7 +52,6 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
     "node-appwrite": "^21.1.0",
     "prettier": "^3.4.2",
