--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,8 +27,7 @@
     "**/.git": true,
     "**/.DS_Store": true,
     "**/node_modules": true,
-    "**/dist": true,
-    "**/.amplify": true
+    "**/dist": true
   },
   "files.watcherExclude": {
     "**/.git/objects/**": true,
@@ -102,7 +101,6 @@
     "**/node_modules": true,
     "**/dist": true,
     "**/build": true,
-    "**/.amplify": true,
     "**/package-lock.json": true
   },
 
